<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D00BCD4"
    tools:context=".MainActivity">




    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="398dp"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="5"
                android:gravity="center|left"
                android:paddingHorizontal="2dp"
                android:text="@string/app_user_name"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:background="#FFEB3B"
                android:gravity="center|left"
                android:paddingHorizontal="2dp"
                android:text="@string/app_wallet"
                android:textColor="#101010"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight="2"
                android:text="@string/introduce"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="286dp"
                    android:layout_height="100dp"
                    android:background="@drawable/star_button_select"
                    android:backgroundTint="#FF9800"
                    android:shadowColor="#221717"
                    android:text="@string/buttom_user_1"
                    android:textColor="#000000"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="286dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/star_button_select"
                    android:backgroundTint="#FFC107"
                    android:text="@string/buttom_user_2"
                    android:textColor="#000000"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="286dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/star_button_select"
                    android:backgroundTint="#FF5722"
                    android:text="@string/buttom_user_3"
                    android:textColor="#000000"
                    android:textSize="40sp" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav"
            android:layout_weight="4"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>