<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:paddingVertical="2dp"
            android:text="@string/introduce"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="#FF9800"
                android:gravity="center"
                android:text="@string/buttom_user_1"
                android:textColor="#000000"
                android:textColorHighlight="#BCBBBB"
                android:textSize="24sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/select_date"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/buttom_order_2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/date_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="21sp" />

            <ListView
                android:id="@+id/listview"
                style="@style/Widget.AppCompat.Light.ListView.DropDown"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="37"
                android:divider="@color/black"
                android:textFilterEnabled="false">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button5"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/clean"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/star_button_select"
                    android:backgroundTint="#F64E42"
                    android:gravity="center"
                    android:text="@string/buttom_order_4"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buy"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/star_button_select"
                    android:backgroundTint="#FFF53B"
                    android:gravity="center"
                    android:text="@string/buttom_order_3"
                    android:textColor="#000000"
                    android:textSize="25sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>